--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
 <div class="container text-center my-5">
   <div class="row my-3">
     <div class="col">
-    	 <img class="gallery" src="./images/gp/1.jpeg">
+    	 <img class="gallery" src="./images/GP/1.jpeg">
     </div>
     <div class="col">
       <img class="gallery" src="./images/gp/2.jpeg">
